--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ body {
 	width: 100%;
 	height:100%;
 	font-family: 'Open Sans', sans-serif;
+	background-attachment: fixed;
 }
 .login { 
 	position: absolute;
