--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@ body {
 	height:100%;
 	font-family: 'Open Sans', sans-serif;
 	background-attachment: fixed;
+	background-image: url('https://1.bp.blogspot.com/-qxwVVTRmwXc/XQPCE5G0ICI/AAAAAAAAALE/kycK2ZKnN7IDfW9MjamiVi5-S-vXiNx9ACLcBGAs/s1600/Pubg%2Bbackground.png');
+ 	background-repeat: no-repeat;
 }
 .login { 
 	position: absolute;
